bobcat (2.05.00)

  * BigInt values inserted into streams do not show leading zeroes anymore, 
    except for octal values.
  * BigInt values can be assigned a value from a textual representation
  * BigInt values can be extracted from std::istream objects.
  * BigInt::inverseMod() and BigInt::gcd() are now member functions rather
    than free functions.
  * BigInt::setBigEndian() is now a static member function. In general: all
    members returning a BigInt computed from a set of arguments and not
    requiring an existing BigInt object are defined as static members.
  * Added MD_CTX initialization and cleanup calls to DigestBuf
  * Added MD_CTX initialization call to HMacBuf

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 23 Sep 2009 15:32:48 +0200

bobcat (2.04.02)

  * DateTime: DST updated by setXXX() members as well.
  * EncryptBuf/DecryptBuf now correctly set keylength
  * EncryptBuf's manpage shows key/block sizes in bytes and provides an
    illustration showing how to discard initial bytes (commonly used with RC4)
  * DecryptBuf's requirement of non-empty IV vector has been dropped
  * Repaired Debian bug #546374, reported by Stefan Ebner

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 13 Sep 2009 11:38:18 +0200

bobcat (2.04.01)

  * Some OpenSSL functions (HMAC, Digest) needed unsigned 'int *'s. They got
'size_t *s' causing problems on 64-bit archs (e.g. amd64). Now fixed.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 04 Sep 2009 23:48:22 +0200

bobcat (2.04.00)

  * BigInt has been enhanced and extended. Many members have received new 
    prototypes.
  * New Class: OHexStreambuf, streambuf derived class writing characters
    received by it as hex numbers to a specified std::ostream.
  * New Class: DigestBuf, streambuf derived class computing various types of
    message digests of the characters received by it.
  * New Class: HMacBuf, streambuf derived class computing a HMAC hashvalue 
    of the characters received by it.