@@ -132,8 +132,9 @@ class BigInt
         BigInt &exp(BigInt const &exponent);
         BigInt &expMod(BigInt const &exponent, BigInt const &mod);
 
-        BigInt const gcd(BigInt const &rhs);
-        BigInt const inverseMod(BigInt const &mod);
+        BigInt const gcd(BigInt const &rhs) const;
+        BigInt const inverseMod(BigInt const &mod) const;
+        BigInt const isqrt() const;
 
         static BigInt const rand(size_t bitsSize, 
                            Msb msb = MSB_IS_ONE, Lsb lsb = ODD);
