@@ -1,3 +1,8 @@
+bobcat (2.06.00) (ISN)
+
+  * Added BigInt::isqrt (integral sqrt computation)
+  * BigInt's members not modifying the current object are now cons-correct.
+
 bobcat (2.05.00)
 
   * BigInt values inserted into streams do not show leading zeroes anymore, 
